--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -15,7 +15,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: git fetch --force --tags
+      - run: |
+          git fetch --force --tags
+          sudo apt-get install -y protobuf-compiler
       - uses: actions/setup-go@v4
         with:
           go-version: stable
