--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -5,6 +5,7 @@ on:
     tags:
       - '*'
 
+
 permissions:
   contents: write
   # packages: write
@@ -17,12 +18,17 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: |
-          git fetch --force --tags
-          sudo apt-get install -y protobuf-compiler
       - uses: actions/setup-go@v4
         with:
           go-version: stable
+      - run: |
+          git fetch --force --tags
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            libbtrfs-dev \
+            libdevmapper-dev
+          sudo apt-get install -y protobuf-compiler
+          go install google.golang.org/protobuf/cmd/protoc-gen-go
       # More assembly might be required: Docker logins, GPG, etc. It all depends
       # on your needs.
       - uses: goreleaser/goreleaser-action@v4
