--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -20,16 +20,17 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v4
         with:
-          go-version: stable
+          go-version: "1.20"
       - run: |
           git fetch --force --tags
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             libbtrfs-dev \
             libdevmapper-dev
-          sudo apt-get install -y protobuf-compiler
-          go install google.golang.org/protobuf/cmd/protoc-gen-go
-          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc
+          make generate
+#          sudo apt-get install -y protobuf-compiler
+#          go install google.golang.org/protobuf/cmd/protoc-gen-go
+#          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc
       # More assembly might be required: Docker logins, GPG, etc. It all depends
       # on your needs.
       - uses: goreleaser/goreleaser-action@v4
