--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,3 @@
-# This is an example .goreleaser.yml file with some sensible defaults.
-# Make sure to check the documentation at https://goreleaser.com
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -16,7 +14,6 @@ builds:
       - darwin
     goarch:
       - amd64
-      - arm
       - arm64
     env:
       - ASSUME_NO_MOVING_GC_UNSAFE_RISK_IT_WITH=go1.20
@@ -36,6 +33,33 @@ archives:
     format_overrides:
     - goos: windows
       format: zip
+
+nfpms:
+  -
+    id: kbcli
+    package_name: kbcli
+    file_name_template: "{{ .ConventionalFileName }}"
+    builds:
+      - kbcli
+
+    vendor: ApeCloud Inc.
+    homepage: kubeblocks.io
+    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
+    description: A CLI tool for kubeblocks
+    license: Apache-2.0
+
+    formats:
+      - deb
+      - rpm
+
+    dependencies:
+      - git
+      - zsh
+
+    # Path that the binaries should be installed.
+    # Default: '/usr/bin'
+    bindir: /usr/bin
+
 checksum:
   name_template: 'checksums.txt'
 snapshot:
