--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,42 +23,92 @@ archives:
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of uname.
     name_template: >-
-      {{ .ProjectName }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
+      {{ .ProjectName }}-
+      {{- .Os }}-
+      {{- if eq .Arch "amd64" }}amd64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}-
+      v{{ .Tag }}.{{ .Ext }}"
     # use zip for windows archives
     format_overrides:
     - goos: windows
       format: zip
 
-nfpms:
+#nfpms:
+#  -
+#    id: kbcli
+#    package_name: kbcli
+#    # Default: '{{ .PackageName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ with .Arm }}v{{ . }}{{ end }}{{ with .Mips }}_{{ . }}{{ end }}{{ if not (eq .Amd64 "v1") }}{{ .Amd64 }}{{ end }}'
+#    # Templates: allowed
+#    file_name_template: "{{ .PackageName }}-{{ .Os }}-{{ .Arch }}{{ with .Arm }}-{{ .Tag }}"
+#    builds:
+#      - kbcli
+#
+#    vendor: ApeCloud Inc.
+#    homepage: kubeblocks.io
+#    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
+#    description: A CLI tool for kubeblocks
+#    license: Apache-2.0
+#
+#    formats:
+#      - deb
+#      - rpm
+#
+#    dependencies:
+#      - git
+#      - zsh
+#
+#    # Path that the binaries should be installed.
+#    # Default: '/usr/bin'
+#    bindir: /usr/bin
+
+brews:
   -
-    id: kbcli
-    package_name: kbcli
-    file_name_template: "{{ .ConventionalFileName }}"
-    builds:
-      - kbcli
+    name: kbcli
+    goarm: 6
+    goamd64: v1
+    url_template: "https://github.com/huyongqii/kubeblocks/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
+    download_strategy: CurlDownloadStrategy
+    custom_require: custom_download_strategy
+    # Git author used to commit to the repository.
+    commit_author:
+      name: huyongqii
+      email: yongqi_hu@163.com
+    # The project name and current git tag are used in the format string.
+    #
+    # Templates: allowed
+    commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
+    # Folder inside the repository to put the formula.
+    folder: Formula
 
-    vendor: ApeCloud Inc.
-    homepage: kubeblocks.io
-    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
-    description: A CLI tool for kubeblocks
-    license: Apache-2.0
+    # Caveats for the user of your binary.
+    caveats: "How to use this binary"
+    # Your app's homepage.
+    homepage: "kubeblocks.io"
+    # Your app's description.
+    #
+    # Templates: allowed
+    description: "kbcli is a CLI tool for kubeblocks"
+    # SPDX identifier of your app's license.
+    license: "MIT"
 
-    formats:
-      - deb
-      - rpm
-
+    # Packages your package depends on.
     dependencies:
-      - git
-      - zsh
-
-    # Path that the binaries should be installed.
-    # Default: '/usr/bin'
-    bindir: /usr/bin
+      - name: git
+      - name: zsh
+        type: optional
+      - name: fish
+        version: v1.2.3
+      # if providing both version and type, only the type will be taken into
+      # account.
+      - name: elvish
+        type: optional
+        version: v1.2.3
+    # Packages that conflict with your package.
+    conflicts:
+      - svn
+      - bash
 
 checksum:
   name_template: 'checksums.txt'
