--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,30 +11,30 @@ builds:
     binary: kbcli
     goos:
     #      - linux
-    #      - windows
+      - windows
       - darwin
     goarch:
       - amd64
-      - arm64
+#      - arm64
     env:
       - ASSUME_NO_MOVING_GC_UNSAFE_RISK_IT_WITH=go1.20
       - CGO_ENABLED=0
 
-#archives:
-#  - format: tar.gz
-#    # this name template makes the OS and Arch compatible with the results of uname.
-#    name_template: >-
-#      {{ .ProjectName }}-
-#      {{- .Os }}-
-#      {{- if eq .Arch "amd64" }}amd64
-#      {{- else if eq .Arch "386" }}i386
-#      {{- else }}{{ .Arch }}{{ end }}
-#      {{- if .Arm }}v{{ .Arm }}{{ end }}-
-#      v{{ .Tag }}"
-#    # use zip for windows archives
-#    format_overrides:
-#    - goos: windows
-#      format: zip
+archives:
+  - format: tar.gz
+    # this name template makes the OS and Arch compatible with the results of uname.
+    name_template: >-
+      {{ .ProjectName }}-
+      {{- .Os }}-
+      {{- if eq .Arch "amd64" }}amd64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}-
+      v{{ .Tag }}"
+    # use zip for windows archives
+    format_overrides:
+    - goos: windows
+      format: zip
 
 #nfpms:
 #  -
@@ -65,8 +65,7 @@ builds:
 #    bindir: /usr/bin
 
 brews:
-  -
-    name: kbcli
+  - name: kbcli
     goarm: 6
     goamd64: v1
     url_template: "https://github.com/huyongqii/kubeblocks/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
@@ -76,22 +75,13 @@ brews:
     commit_author:
       name: huyongqii
       email: yongqi_hu@163.com
-    # The project name and current git tag are used in the format string.
-    #
-    # Templates: allowed
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
     # Folder inside the repository to put the formula.
     folder: Formula
 
     # Caveats for the user of your binary.
     caveats: "How to use this binary"
-    # Your app's homepage.
-    homepage: "kubeblocks.io"
-    # Your app's description.
-    #
-    # Templates: allowed
     description: "kbcli is a CLI tool for kubeblocks"
-    # SPDX identifier of your app's license.
     license: "MIT"
 
     # Packages your package depends on.
@@ -111,6 +101,20 @@ brews:
       - svn
       - bash
 
+scoops:
+  - name: kbcli
+    folder: Scoops
+    commit_author:
+      name: huyongqii
+      email: yongqi_hu@163.com
+    commit_msg_template: "Scoop formula update for {{ .ProjectName }} version {{ .Tag }}"
+    description: "Software to create fast and easy drum rolls."
+    license: MIT
+    goamd64: v3
+    repository:
+      owner: apecloud
+      name: scoop-test
+      branch: main
 
 checksum:
   name_template: 'checksums.txt'
@@ -122,6 +126,7 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+
 
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
