--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -68,11 +68,13 @@ brews:
     tap:
       name: kbcli-tap
       owner: apecloud
+      token: "{{ .Env.GITHUB_TOKEN }}"
       branch: main
       pull_request:
         enabled: false
       git:
-        url: 'https://github.com/huyongqii/tap-test.git'
+        url: "https://github.com/huyongqii/tap-test.git"
+        private_key: "{{ .Env.GITHUB_TOKEN }}"
 
     goarm: 6
     goamd64: v1
@@ -114,8 +116,10 @@ scoops:
     bucket:
       name: kbcli-scoop
       owner: apecloud
+      token: "{{ .Env.GITHUB_TOKEN }}"
       git:
-        url: 'https://github.com/huyongqii/scoop-test.git'
+        url: "https://github.com/huyongqii/scoop-test.git"
+        private_key: "{{ .Env.GITHUB_TOKEN }}"
     folder: Scoops
     commit_author:
       name: huyongqii
