--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,12 +10,12 @@ builds:
     id: "kbcli"
     binary: kbcli
     goos:
-#      - linux
-#      - windows
+      - linux
+      - windows
       - darwin
     goarch:
       - amd64
-#      - arm64
+      - arm64
     env:
       - ASSUME_NO_MOVING_GC_UNSAFE_RISK_IT_WITH=go1.20
       - CGO_ENABLED=0
@@ -43,30 +43,30 @@ release:
     owner: huyongqii
     name: tap-test
 
-#nfpms:
-#  -
-#    id: kbcli
-#    package_name: kbcli
-#    file_name_template: "{{ .Env.ProjectName }}-{{ .Os }}-{{ .Arch }}-{{ .Tag }}"
-#    builds:
-#      - kbcli
-#
-#    vendor: ApeCloud Inc.
-#    homepage: kubeblocks.io
-#    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
-#    description: A CLI tool for kubeblocks
-#    license: Apache-2.0
-#
-#    formats:
-#      - deb
-#      - rpm
-#
-#    dependencies:
-#      - git
-#      - zsh
-#
-#    # Path that the binaries should be installed.
-#    bindir: /usr/bin
+nfpms:
+  -
+    id: kbcli
+    package_name: kbcli
+    file_name_template: "{{ .Env.ProjectName }}-{{ .Os }}-{{ .Arch }}-{{ .Tag }}"
+    builds:
+      - kbcli
+
+    vendor: ApeCloud Inc.
+    homepage: kubeblocks.io
+    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
+    description: A CLI tool for kubeblocks
+    license: Apache-2.0
+
+    formats:
+      - deb
+      - rpm
+
+    dependencies:
+      - git
+      - zsh
+
+    # Path that the binaries should be installed.
+    bindir: /usr/bin
 
 #brews:
 #  - name: kbcli
