--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -44,30 +44,30 @@ release:
     owner: huyongqii
     name: tap-test
 
-nfpms:
-  -
-    id: kbcli
-    package_name: kbcli
-    file_name_template: "{{ .Env.ProjectName }}-{{ .Os }}-{{ .Arch }}-{{ .Tag }}"
-    builds:
-      - kbcli
-
-    vendor: ApeCloud Inc.
-    homepage: kubeblocks.io
-    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
-    description: A CLI tool for kubeblocks
-    license: Apache-2.0
-
-    formats:
-      - deb
-      - rpm
-
-    dependencies:
-      - git
-      - zsh
-
-    # Path that the binaries should be installed.
-    bindir: /usr/bin
+#nfpms:
+#  -
+#    id: kbcli
+#    package_name: kbcli
+#    file_name_template: "{{ .Env.ProjectName }}-{{ .Os }}-{{ .Arch }}-{{ .Tag }}"
+#    builds:
+#      - kbcli
+#
+#    vendor: ApeCloud Inc.
+#    homepage: kubeblocks.io
+#    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
+#    description: A CLI tool for kubeblocks
+#    license: Apache-2.0
+#
+#    formats:
+#      - deb
+#      - rpm
+#
+#    dependencies:
+#      - git
+#      - zsh
+#
+#    # Path that the binaries should be installed.
+#    bindir: /usr/bin
 
 #brews:
 #  - name: kbcli
