--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,7 +10,7 @@ builds:
     id: "kbcli"
     binary: kbcli
     goos:
-      - linux
+#      - linux
       - windows
 #      - darwin
     goarch:
@@ -37,36 +37,40 @@ archives:
     - goos: windows
       format:
         zip
+
 release:
   github:
     owner: huyongqii
     name: tap-test
+  gitlab:
+    owner: huyongqii
+    name: tap-test
 
-nfpms:
-  -
-    id: kbcli
-    package_name: kbcli
-    file_name_template: "{{ .Env.ProjectName }}-{{ .Os }}-{{ .Arch }}-{{ .Tag }}"
-    builds:
-      - kbcli
-
-    vendor: ApeCloud Inc.
-    homepage: kubeblocks.io
-    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
-    description: A CLI tool for kubeblocks
-    license: Apache-2.0
-    release: "1"
-
-    formats:
-      - deb
-      - rpm
-
-    dependencies:
-      - git
-      - zsh
-
-    # Path that the binaries should be installed.
-    bindir: /usr/bin
+#nfpms:
+#  -
+#    id: kbcli
+#    package_name: kbcli
+#    file_name_template: "{{ .Env.ProjectName }}-{{ .Os }}-{{ .Arch }}-{{ .Tag }}"
+#    builds:
+#      - kbcli
+#
+#    vendor: ApeCloud Inc.
+#    homepage: kubeblocks.io
+#    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
+#    description: A CLI tool for kubeblocks
+#    license: Apache-2.0
+#    release: "1"
+#
+#    formats:
+#      - deb
+#      - rpm
+#
+#    dependencies:
+#      - git
+#      - zsh
+#
+#    # Path that the binaries should be installed.
+#    bindir: /usr/bin
 
 #brews:
 #  - name: kbcli
