--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,9 +10,9 @@ builds:
     id: "kbcli"
     binary: kbcli
     goos:
-#      - linux
+      - linux
       - windows
-#      - darwin
+      - darwin
     goarch:
       - amd64
       - arm64
@@ -24,7 +24,6 @@ env:
 
 archives:
   - format: tar.gz
-    # this name template makes the OS and Arch compatible with the results of uname.
     name_template: >-
       {{- .Env.ProjectName }}-
       {{- .Os }}-
@@ -32,7 +31,6 @@ archives:
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}-
       {{- .Tag }}
-    # use zip for windows archives
     format_overrides:
     - goos: windows
       format:
@@ -45,35 +43,32 @@ release:
   github:
     owner: huyongqii
     name: tap-test
-  gitlab:
-    owner: huyongqii
-    name: tap-test
 
-#nfpms:
-#  -
-#    id: kbcli
-#    package_name: kbcli
-#    file_name_template: "{{ .Env.ProjectName }}-{{ .Os }}-{{ .Arch }}-{{ .Tag }}"
-#    builds:
-#      - kbcli
-#
-#    vendor: ApeCloud Inc.
-#    homepage: kubeblocks.io
-#    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
-#    description: A CLI tool for kubeblocks
-#    license: Apache-2.0
-#    release: "1"
-#
-#    formats:
-#      - deb
-#      - rpm
-#
-#    dependencies:
-#      - git
-#      - zsh
-#
-#    # Path that the binaries should be installed.
-#    bindir: /usr/bin
+nfpms:
+  -
+    id: kbcli
+    package_name: kbcli
+    file_name_template: "{{ .Env.ProjectName }}-{{ .Os }}-{{ .Arch }}-{{ .Tag }}"
+    builds:
+      - kbcli
+
+    vendor: ApeCloud Inc.
+    homepage: kubeblocks.io
+    maintainer: ApeCloud Inc. <yongqi_hu@163.com>
+    description: A CLI tool for kubeblocks
+    license: Apache-2.0
+    release: "1"
+
+    formats:
+      - deb
+      - rpm
+
+    dependencies:
+      - git
+      - zsh
+
+    # Path that the binaries should be installed.
+    bindir: /usr/bin
 
 #brews:
 #  - name: kbcli
@@ -143,10 +138,14 @@ release:
 checksum:
   name_template: '{{ .Env.ProjectName }}-checksums.txt'
   algorithm: sha256
-#signs:
-#  - artifacts: checksum
+
+signs:
+  - artifacts: checksum
+    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
+
 changelog:
   sort: asc
   filters:
