--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,8 +11,8 @@ builds:
     binary: kbcli
     goos:
       - linux
-      - windows
-      - darwin
+#      - windows
+#      - darwin
     goarch:
       - amd64
       - arm64
