--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -140,8 +140,9 @@ checksum:
   algorithm: sha256
 
 signs:
-  - artifacts: checksum
-    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+  - artifacts: all
+    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}","${artifact}"]
+    output: true
 
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
