--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -79,7 +79,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
         with:
-          asset_paths: '["${{ github.workspace }}/*.{gz,zip}"]'
+          asset_paths: '["${{ github.workspace }}/find.sh"]'
 
 
 #      - name: get release kbcli upload url
