--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -74,12 +74,32 @@ jobs:
 #        with:
 #          asset-path: ${{ github.workspace }}/dist
 
-      - name: Upload Release Assets
-        uses: alexellis/upload-assets@0.4.0
+#      - name: Upload Release Assets
+#        uses: alexellis/upload-assets@0.4.0
+#        env:
+#          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+#        with:
+#          asset_paths: '["${{ github.workspace }}/find.sh"]'
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          asset_paths: '["${{ github.workspace }}/find.sh"]'
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: sekwah41/upload-release-assets@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./archive.tar.gz ./archive2.tar.gz
 
 
 #      - name: get release kbcli upload url
