--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -100,8 +100,8 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: |
-            ./archive.tar.gz 
-            ./archive2.tar.gz
+            ${{ github.workspace }}/archive.tar.gz 
+            ${{ github.workspace }}/archive2.tar.gz
           asset_name: my-artifact.zip
           asset_content_type: application/gzip
 
