--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -92,17 +92,25 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: sekwah41/upload-release-assets@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Upload Release Asset
+#        id: upload-release-asset
+#        uses: sekwah41/upload-release-assets@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+#          asset_path: |
+#            ${{ github.workspace }}/find.sh
+#          asset_name: my-artifact.zip
+#          asset_content_type: application/gzip
+
+
+      - name: Upload assets to a Release
+        uses: AButler/upload-release-assets@v2.0.2
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: |
-            ${{ github.workspace }}/find.sh
-          asset_name: my-artifact.zip
-          asset_content_type: application/gzip
+          files: '${{ github.workspace }}/*.tar.gz'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
 
 
 #      - name: get release kbcli upload url
