--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -108,7 +108,7 @@ jobs:
       - name: Upload assets to a Release
         uses: AButler/upload-release-assets@v2.0.2
         with:
-          files: '${{ github.workspace }}/tmp/*'
+          files: '${{ github.workspace }}/*.sh'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           release-tag: ${{ env.TAG_NAME }}
 
