--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -103,8 +103,8 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ${{ github.workspace }}/tmp/*.txt
-          asset_name: 
-          asset_content_type:
+          asset_name: tmp.txt
+          asset_content_type: application/octet-stream
 
 
 #      - name: Upload assets to a Release
