--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -84,14 +84,6 @@ jobs:
 #        with:
 #          asset_paths: '["${{ github.workspace }}/find.sh"]'
 
-      - name: "Fetch tags"
-        id: fetch-tags
-        uses: actions/github-script@v2
-        with:
-          script: |
-            return require(`${process.env.GITHUB_WORKSPACE}/package.json`).version
-          result-encoding: string
-
       - name: Upload release binaries
         uses: boxpositron/upload-multiple-releases@1.0.6
         env:
@@ -100,8 +92,8 @@ jobs:
           release_config: |
             ${{ github.workspace }}/*.sh
             ${{ github.workspace }}/*.tar.gz
-          tag_name: v${{ steps.fetch-tags.outputs.result }}
-          release_name: ${{ steps.fetch-tags.outputs.result }}
+          tag_name: v${{ env.TAG_NAME }}
+          release_name: ${{ env.TAG_NAME }}
           draft: false
           prerelease: false
           overwrite: true
