--- a/.github/workflows/goreleaser-release.yml
+++ b/.github/workflows/goreleaser-release.yml
@@ -91,7 +91,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          asset_files: '${{ github.workspace }}/tmp'
+          asset_files: '${{ github.workspace }}/*.sh'
 
 
 #      - name: Upload assets to a Release
